cabal-version:      3.4
name:               hodo
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Arcelyth
maintainer:         arcelyth@tutamail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

library
    ghc-options:         -Wall
    exposed-modules:  
        Tui
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.18.3.0
      , brick
      , vty >= 6.0
      , vty-crossplatform
      , text
      , vector
      , directory
      , mtl
      , microlens-mtl
      , microlens
      , microlens-th
      , filepath
                
    hs-source-dirs:   src
    default-language: Haskell2010

executable hodo
    ghc-options:      -threaded   -Wall
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        hodo

    hs-source-dirs:   app
    default-language: Haskell2010
